@@ -1,6 +1,5 @@
 package net.minestom.testing;
 
-import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 import java.util.function.Consumer;
@@ -9,20 +8,20 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 public interface Collector<T> {
-    @NotNull List<@NotNull T> collect();
+    List<T> collect();
 
-    default <P extends T> void assertSingle(@NotNull Class<P> type, @NotNull Consumer<P> consumer) {
+    default <P extends T> void assertSingle(Class<P> type, Consumer<P> consumer) {
         List<T> elements = collect();
         assertEquals(1, elements.size(), "Expected 1 element, got " + elements);
-        var element = elements.get(0);
+        var element = elements.getFirst();
         assertInstanceOf(type, element, "Expected type " + type.getSimpleName() + ", got " + element.getClass().getSimpleName());
         consumer.accept((P) element);
     }
 
-    default void assertSingle(@NotNull Consumer<T> consumer) {
+    default void assertSingle(Consumer<T> consumer) {
         List<T> elements = collect();
         assertEquals(1, elements.size(), "Expected 1 element, got " + elements);
-        consumer.accept(elements.get(0));
+        consumer.accept(elements.getFirst());
     }
 
     default void assertCount(int count) {
